# prezentare_licenta

./: Cargo.toml  LICENSE  build.rs  convert.py  index2.html  main.js  main2.js
demo/: main.js
demo/pkg/: demo_licenta.d.ts  demo_licenta.js  demo_licenta_bg.wasm  demo_licenta_bg.wasm.d.ts
pkg/: package.json  prezentare_licenta.d.ts  prezentare_licenta.js  prezentare_licenta_bg.wasm.d.ts
src/: lib.rs
src/slides/: 01.slide  02.slide  03.slide  04.slide  05.slide  05a.slide  06.slide  07.slide  08.slide  09.slide  10.slide  12_0.slide  12_1.slide  12_2.slide  13.slide  14_1.slide  14_2.slide  14_3.slide  14_4.slide  14_5.slide  15_1.slide  15_2.slide  15_3.slide  15_4.slide  15_5.slide  16_1.slide  16_2.slide  16_3.slide  16_4.slide  16_5.slide  17_1.slide  17_2.slide  17_3.slide  17_4.slide  18.slide  19.slide  20.slide  21.slide
src/surfaces/: 01.srf  05a.srf  06.srf  07.srf  12_2.srf  14_1.srf  14_2.srf  14_3.srf  14_4.srf  14_5.srf  15_2.srf  15_3.srf  16_1.srf  16_2.srf  16_3.srf  16_4.srf  16_5.srf  17_1.srf  17_2.srf  17_3.srf  17_4.srf  18.srf  19.srf  20.srf  21.srf  22.srf
src/surfaces_06_30_18_44/: 04.srf  12_0.srf  14_2.srf  14_3.srf  14_6.srf  15_4.srf  16_1.srf  16_4.srf
src/surfaces_06_30_22_28/: 03.srf  06.srf  12_1.srf  14_1.srf  14_2.srf  14_3.srf  14_4.srf  15_1.srf  15_2.srf  15_3.srf  15_4.srf  16_3.srf  16_4.srf  16_5.srf
src/surfaces_06_30_8_48/: 01.srf  02.srf  03.srf  06.srf  08.srf  09.srf  15_1.srf  15_2.srf  15_3.srf  15_5.srf  16_2.srf  16_3.srf  16_5.srf
src/surfaces_13_54/: 2.srf  4.srf
src/surfaces_16_41/: 5.srf
(+10 files in other folders)
